# torch_amt

./: .gitignore  .readthedocs.yaml  CITATION.cff  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
dev/: template_docs_common.md  template_docs_models.md
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/api/: adaptation.rst  ears.rst  ihc.rst  (+5 more)
tests/: macbook_m4pro_cpu_profile.csv  main.py  profile_submodules.py
tests/analysis/: test_adaptation.py  test_combined_ear_filters.py  test_combined_ear_filters_zero.py  test_comparison_glasberg_moore.py  test_compression.py  test_dau1997.py  test_dau1997_modfilt_design.py  test_drnl_filterbank.py  test_erb_conversions.py  test_erb_integration.py  test_excitation_pattern.py  test_fast_drnl_filterbank.py  test_fast_modulation_filterbank.py  test_gammatone_comparison.py  test_gammatone_filterbank.py  test_glasberg2002.py  test_glasberg2002_stl_ltl.py  test_headphone_filter.py  test_ihc_paulick2024.py  test_king2019.py  test_king2019_fast_modfilt_design.py  test_king2019_modfilt_design.py  test_middleear_filter.py  test_modulation_filterbank.py  test_moore2016.py  test_moore2016_binauralloudness.py  test_moore2016_excitation.py  test_moore2016_glasberg2002_comparison.py  test_moore2016_specific_loudness.py  test_moore2016_spectrum.py  test_moore2016_temporal.py  test_moore2016_vs_glasberg2002_temporal.py  test_multi_resolution_fft.py  test_osses2021.py  test_osses2021_vs_dau1997.py  test_outer_middle_ear_filters.py  test_paulick2024.py  test_specific_loudness.py
tests/functional/: test_device_adaptation.py  test_device_ears.py  test_device_filterbanks.py  test_device_ihc.py  test_device_loudness.py  test_device_models.py  test_device_modulation.py
torch_amt/: __init__.py
torch_amt/common/: __init__.py  adaptation.py  ears.py  filterbanks.py  filters.py  ihc.py  loudness.py  modulation.py
torch_amt/models/: __init__.py  dau1997.py  glasberg2002.py  king2019.py  moore2016.py  osses2021.py  paulick2024.py
