[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-amt"
version = "0.2.0"
description = "PyTorch implementation of auditory models from the MATLAB Auditory Modeling Toolbox"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Stefano Giacomelli", email = "stefano.giacomelli@graduate.univaq.it"}]
keywords = ["auditory models", "pytorch", "neuroscience", "psychoacoustics", "hearing", "deep learning", "computational neuroscience", "AMT"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = ["torch>=2.0.0",
                "torchaudio>=2.0.0",
                "numpy>=1.24.0",
                "scipy>=1.10.0",
                "matplotlib>=3.5.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0",
       "pytest-cov>=4.0.0"]
docs = ["sphinx>=5.0.0",
        "sphinx-rtd-theme>=1.2.0",
        "sphinx-autodoc-typehints>=1.24.0",
        "myst-parser>=2.0.0"]

[project.urls]
Homepage = "https://github.com/StefanoGiacomelli/torch_amt"
Documentation = "https://torch-amt.readthedocs.io"
Repository = "https://github.com/StefanoGiacomelli/torch_amt"
"Bug Tracker" = "https://github.com/StefanoGiacomelli/torch_amt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["torch_amt*"]

[tool.pytest.ini_options]
testpaths = ["tests/analysis", "tests/functional"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
